tempfile/impl-trait-for-tuples/tests/ui/custom_where_clause_not_allowed.rs
trait Test {
    fn test();
}

#[impl_trait_for_tuples::impl_for_tuples(2)]
impl Test for Tuple {
    fn test() {
        for_tuples!( where #( Tuple: Test ),* )
    }
}

fn main() {}
